--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
 
 <script>
     $(function(){
+        $("#user_name").focus();
         $("#login").click(function(){
             name = $("#user_name").val();
             window.location.href='index.php?user_name='+name
